Custom select overflow issue

--- a/src/main/scala/com/tewe/nrftw/EnchantmentsBuilder.css
+++ b/src/main/scala/com/tewe/nrftw/EnchantmentsBuilder.css
@@ -20,14 +20,28 @@
   }
 
   .custom-select-container {
+    position: relative;
     background-color: var(--color-bg-item);
     border: 1px solid var(--color-border-dark);
     padding: 4px;
     border-radius: 4px;
-    width: 100%;
+    /* width: 100%; */
+    max-width: 448px;
     margin-bottom: 10px;
     cursor: pointer;
     outline: none;
+
+    .custom-select-dropdown {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      border: 1px solid var(--color-border-dark);
+      border-radius: 4px;
+      z-index: 1000;
+      max-height: 400px;
+      overflow-y: auto;
+    }
   }
 
   select {
@@ -119,10 +133,17 @@
   align-items: center;
 }
 
+.enchant-display-text {
+  b {
+    display: contents;
+  }
+}
+
 .ui-font-icons {
+  display: inline-block;
   width: 16px;
   height: 16px;
-  margin-right: 2px;
+  vertical-align: -2px;
 
   background-image: url('/images/uiFontIcons.png');
   background-repeat: no-repeat;
@@ -261,7 +282,7 @@
 .enchant-group-sprite {
   width: 16px;
   height: 16px;
-  margin-right: 6px;
+  margin-right: 10px;
 
   background-image: url('/images/uiEnchantmentGroupAtlas.png');
   background-repeat: no-repeat;
@@ -319,4 +340,24 @@
   .sprite-Downside {
     background-position: 0px 0px;
   }
+}
+
+.enchant-tag-sPhysical {
+  color: var(--color-enchant-tag-sPhysical);
+}
+
+.enchant-tag-sFire {
+  color: var(--color-enchant-tag-sFire);
+}
+
+.enchant-tag-sIce {
+  color: var(--color-enchant-tag-sIce);
+}
+
+.enchant-tag-sLightning {
+  color: var(--color-enchant-tag-sLightning);
+}
+
+.enchant-tag-sPlague {
+  color: var(--color-enchant-tag-sPlague);
 }
